updated index page and added yueying wang page

--- a/index.html
+++ b/index.html
@@ -88,21 +88,21 @@
               <li class="home-blog-post">
                 <div class="blog-thumb">
                   <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                    <img width="304" height="304" class="prof-image" src="img/students/YueyingProfile.JPG" class="attachment-blog-thumb wp-post-image" alt="student_name">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/student_name.html">Yueying Wang
                     </h3>
                   </div>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <p>I was an environmental engineer. I used to live in Houston and help people controlling flooding issues. I want to be a software engineer in the future!</p>
                 </div>
                 <div class="clear"></div>
               </li>
