update index page and add robert page

--- a/index.html
+++ b/index.html
@@ -111,22 +111,35 @@
               <!-- Begin Student 2 -->
               <li class="home-blog-post">
                 <div class="blog-thumb">
-                  <a href="students/student_name.html">
-                    <img width="304" height="304" class="prof-image" src="img/students/student_name_profile.jpg" class="attachment-blog-thumb wp-post-image" alt="student_name">
+                  <a href="students/robert_keller.html">
+                    <img width="304" height="304" class="prof-image" src="img/students/robert-keller-profile.jpg" class="attachment-blog-thumb wp-post-image" alt="robert_keller">
                   </a>
                 </div>
 
                 <div class="blog-title">
                   <div class="big-comment">
                     <h3>
-                      <a href="students/student_name.html">Student Name</a>
+                      <a href="students/robert_keller.html">Robert Keller</a>
                     </h3>
                   </div>
                 </div>
                 <div class="clear"></div>
 
                 <div class="excerpt">
-                  <p>Excerpt.</p>
+                  <ul>
+                    <li>Before Flatiron I went to culinary school and worked in Michelin starred restaurants in NYC.</li>
+                    <li>I enjoy putting things together, and building something from scratch.</li>
+                  </ul>
+                  <ul>
+                    <li>Bachelor's Degree in Culinary Arts Management, The Culinary Institute of America, Hyde Park, NY</li>
+                    <li>General Manager, Masa Restaurant, NYC</li>
+                    <li>Assistant General Manager, Aureole Restaurant, NYC</li>
+                  </ul>
+                  <ul>
+                    <li>Quote: "Things are only impossible until they are not." - Jean-Luc Picard</li>
+                    <li>Food: Sushi</li>
+                    <li>Websites: twich.tv/reddit.com/finewoodworking.com</li>
+                  </ul>
                 </div>
                 <div class="clear"></div>
               </li>
